# petkit-rs

./: .env.example  .gitignore  .mise.toml  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  actrun.toml  clippy.toml  deny.toml  rust-toolchain.toml  typos.toml
.cargo/: config.toml  mutants.toml
.github/workflows/: quality.yml  tooling.yml
crates/petkit-client/: Cargo.toml
crates/petkit-client/examples/: all_scopes.rs  fountain_ble_writer.rs  host_callback_async.rs  host_callback_blocking.rs  reqwest_async_camera_live_feed_probe.rs  reqwest_async_feeder_detail.rs  reqwest_async_litter_detail.rs  reqwest_async_purifier_detail.rs  reqwest_blocking_cloud_ble_probe.rs  reqwest_blocking_feeder_detail.rs  reqwest_blocking_fountain_detail_probe.rs  reqwest_blocking_litter_detail.rs  reqwest_blocking_purifier_detail.rs  ureq_blocking_feeder_detail.rs  ureq_blocking_litter_detail.rs  ureq_blocking_purifier_detail.rs
crates/petkit-client/examples/support/: common.rs
crates/petkit-client/src/: action_adapter.rs  lib.rs
crates/petkit-protocol/: Cargo.toml
crates/petkit-protocol/src/: ble.rs  lib.rs  protocol.rs  request.rs  response.rs
crates/petkit-protocol/src/protocol/: agora.rs  cloud_ble.rs  feeder.rs  fountain.rs  litter.rs  pet.rs  purifier.rs
crates/petkit-protocol/src/protocol/feeder/: amount.rs  model.rs  scope.rs
crates/petkit-types/: Cargo.toml
crates/petkit-types/docs/: settings-research.md
crates/petkit-types/src/: camera.rs  client.rs  cloud_ble.rs  command.rs  device.rs  discovery.rs  error.rs  lib.rs  media.rs  region.rs  response.rs  session.rs  setting.rs  value.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: api_response.rs  base_url_join.rs  ble_frame.rs
scripts/: actrun.sh  ci-feature-matrix.sh  ci-minimal-versions.sh  ci-msrv.sh  ci-quality.sh  mutation-smoke.sh  petkit-live-smoke.sh
